# libdie

src/: Makefile.in  configure  configure.ac  die.c  die.h
