AC_PREREQ(2.59)
AC_INIT(Die, 0.9, orchard@physics.mcgill.ca)
AC_CONFIG_SRCDIR([die.c])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([signal.h stdarg.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([raise,vfprintf])


AC_CONFIG_FILES([Makefile])

AC_OUTPUT
